# ai-digest-bot

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  Tasks.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: digest.yml
src/: config.py  db.py  filter.py  main.py  pipeline.py  scheduler.py  server.py
src/collector/: __init__.py  rss.py  search.py  sources.py
src/notion/: client.py
src/slack/: channel.py  interactions.py  sender.py
src/summarizer/: gemini.py
