[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-digest-bot"
version = "0.1.0"
description = "AI 최신 뉴스를 수집·요약해 Slack에 전송하는 봇"
requires-python = ">=3.11"
dependencies = [
    # Slack
    "slack-sdk>=3.27",
    # Google Gemini
    "google-genai>=1.0",
    # Notion
    "notion-client>=2.2",
    # Scheduling
    "APScheduler>=3.10",
    # Web search
    "tavily-python>=0.5",
    # RSS
    "feedparser>=6.0",
    # Async HTTP
    "httpx>=0.27",
    # Web server (Slack Interactive Components)
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Config
    "pydantic-settings>=2.3",
    # python-multipart: FastAPI form 파싱 (Slack payload)
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",  # TestClient용
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
