[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-digest-bot"
version = "0.1.0"
description = "AI 최신 뉴스를 수집·요약해 Slack에 전송하는 봇"
requires-python = ">=3.11"
dependencies = [
    # Slack
    "slack-sdk>=3.27",
    # Groq
    "groq>=0.11",
    # Web search
    "tavily-python>=0.5",
    # RSS
    "feedparser>=6.0",
    # Async HTTP
    "httpx>=0.27",
    # Config
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",  # TestClient용
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
